# ext/go-client/api/swagger.yaml
@@ -2,7 +2,7 @@
 swagger: "2.0"
 info:
   description: "FReD - Fog Replicated Data Storage."
-  version: "0.0.3"
+  version: "0.0.4"
   title: "FReD"
   contact:
     email: "tp@mcc.tu-berlin.de"
@@ -20,40 +20,12 @@ tags:
   description: "set up a new P2P network of FReD nodes"
 - name: "replication"
   description: "manage replication between nodes"
+- name: "triggers"
+  description: "manage trigger nodes"
 schemes:
 - "https"
 - "http"
 paths:
-  /seed:
-    post:
-      tags:
-      - "seed"
-      summary: "Seeds the Node"
-      description: "Seeds the Node so replication can begin."
-      consumes:
-      - "application/json"
-      produces:
-      - "text/plain"
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Seed, contains public IP address and ID for the node."
-        required: true
-        schema:
-          $ref: "#/definitions/Seed"
-        x-exportParamName: "Body"
-      responses:
-        "200":
-          description: "OK"
-        "404":
-          description: "Bad Request, request body is malformed"
-          schema:
-            $ref: "#/definitions/Error"
-        "409":
-          description: "Conflict, node is seeded already"
-          schema:
-            $ref: "#/definitions/Error"
   /keygroup/{group_id}:
     post:
       tags:
@@ -108,8 +80,7 @@ paths:
       - "keygroup"
       - "replication"
       summary: "Gets all Replica Nodes for a Keygroup"
-      description: "Returns replica nodes for a Keygroup with the name `group_id`\
-        \ if it does not exist already."
+      description: "Returns replica nodes for a Keygroup with the name `group_id`."
       produces:
       - "text/plain"
       - "application/json"
@@ -319,36 +290,6 @@ paths:
           description: "OK"
           schema:
             $ref: "#/definitions/ReplicationList"
-    post:
-      tags:
-      - "replication"
-      summary: "Register a new Replica Node"
-      description: "Creates a new replica node if it does not exist already or updates\
-        \ existing data."
-      consumes:
-      - "application/json"
-      produces:
-      - "text/plain"
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "ID, Address and Port of Replica Node."
-        required: true
-        schema:
-          $ref: "#/definitions/Replica"
-        x-exportParamName: "Body"
-      responses:
-        "200":
-          description: "OK"
-        "400":
-          description: "Bad Request, post body does not mach definition"
-          schema:
-            $ref: "#/definitions/Error"
-        "409":
-          description: "Conflict, Replica Node exists already"
-          schema:
-            $ref: "#/definitions/Error"
   /replica/{node_id}:
     get:
       tags:
@@ -397,6 +338,103 @@ paths:
           description: "Replica Node not found"
           schema:
             $ref: "#/definitions/Error"
+  /keygroup/{group_id}/triggers:
+    get:
+      tags:
+      - "triggers"
+      summary: "Gets all Trigger Nodes for a Keygroup"
+      description: "Returns trigger nodes for a Keygroup with the name `group_id`."
+      produces:
+      - "text/plain"
+      - "application/json"
+      parameters:
+      - name: "group_id"
+        in: "path"
+        description: "Name of Keygroup"
+        required: true
+        type: "string"
+        format: "string"
+        x-exportParamName: "GroupId"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/TriggerList"
+        "404":
+          description: "Keygroup not Found"
+          schema:
+            $ref: "#/definitions/Error"
+  /keygroup/{group_id}/triggers/{trigger_node_id}:
+    post:
+      tags:
+      - "triggers"
+      summary: "Create a new Trigger node for a Keygroup"
+      description: "Registers the trigger node with the name `trigger_node_id` and\
+        \ host `host` as a trigger node for a Keygroup with the name `group_id` if\
+        \ it does not exist already."
+      produces:
+      - "text/plain"
+      - "application/json"
+      parameters:
+      - name: "group_id"
+        in: "path"
+        description: "Name of Keygroup"
+        required: true
+        type: "string"
+        format: "string"
+        x-exportParamName: "GroupId"
+      - name: "trigger_node_id"
+        in: "path"
+        description: "Name of Trigger Node"
+        required: true
+        type: "string"
+        format: "string"
+        x-exportParamName: "TriggerNodeId"
+      - in: "body"
+        name: "host"
+        description: "Host of the trigger node"
+        required: true
+        schema:
+          $ref: "#/definitions/TriggerNode"
+        x-exportParamName: "Host"
+      responses:
+        "200":
+          description: "OK"
+        "409":
+          description: "Conflict, Trigger Node or Keygroup exists already"
+          schema:
+            $ref: "#/definitions/Error"
+    delete:
+      tags:
+      - "triggers"
+      summary: "Remove an existing trigger node for a Keygroup"
+      description: "De-registers the node with the name {trigger_node_id} as a trigger\
+        \ node for the Keygroup with the name `group_id` if it exists."
+      produces:
+      - "text/plain"
+      - "application/json"
+      parameters:
+      - name: "group_id"
+        in: "path"
+        description: "Name of Keygroup"
+        required: true
+        type: "string"
+        format: "string"
+        x-exportParamName: "GroupId"
+      - name: "trigger_node_id"
+        in: "path"
+        description: "Name of Trigger Node"
+        required: true
+        type: "string"
+        format: "string"
+        x-exportParamName: "TriggerNodeId"
+      responses:
+        "200":
+          description: "OK"
+        "404":
+          description: "Trigger Node or Keygroup not found"
+          schema:
+            $ref: "#/definitions/Error"
 definitions:
   Item:
     type: "object"
@@ -419,43 +457,15 @@ definitions:
       id: "hello"
       value: "Hello World!"
       keygroup: "Test-Keygroup"
-  Replica:
+  TriggerNode:
     type: "object"
     required:
-    - "nodes"
+    - "host"
     properties:
-      nodes:
-        type: "array"
-        items:
-          $ref: "#/definitions/Node"
-    example:
-      nodes:
-      - id: "nodeB"
-        addr: "172.12.0.3"
-        zmqPort: 5555
-      - id: "nodeC"
-        addr: "nodeC.nodes.mcc-f.red"
-        zmqPort: 5554
-      - id: "nodeD"
-        addr: "localhost"
-        zmqPort: 5553
-  Seed:
-    type: "object"
-    required:
-    - "addr"
-    - "id"
-    properties:
-      id:
+      host:
         type: "string"
         format: "utf-8"
-        example: "nodeA"
-      addr:
-        type: "string"
-        format: "utf-8"
-        example: "172.12.0.3"
-    example:
-      id: "nodeA"
-      addr: "172.12.0.3"
+        example: "172.26.0.2:3333"
   Node:
     type: "object"
     required:
@@ -503,3 +513,35 @@ definitions:
       - "nodeB"
       - "nodeC"
       - "nodeD"
+  TriggerList:
+    type: "object"
+    required:
+    - "nodes"
+    properties:
+      nodes:
+        type: "array"
+        items:
+          $ref: "#/definitions/TriggerList_nodes"
+    example:
+      nodes:
+      - host: "172.12.0.3:3333"
+        id: "triggernodeA"
+      - host: "172.12.0.3:3333"
+        id: "triggernodeA"
+  TriggerList_nodes:
+    type: "object"
+    required:
+    - "host"
+    - "id"
+    properties:
+      id:
+        type: "string"
+        format: "utf-8"
+        example: "triggernodeA"
+      host:
+        type: "string"
+        format: "utf-8"
+        example: "172.12.0.3:3333"
+    example:
+      host: "172.12.0.3:3333"
+      id: "triggernodeA"
